# symi-emacs

./: .gitignore  LSP_README.md  emacs-symi-lsp.el  test-lsp-server.sh
editor/src-tauri/: Cargo.toml
editor/src-tauri/src/: commands.rs  lib.rs
