[package]
name = "symi-editor"
version = "0.1.5"
description = "An text editor for Symi, a notation language for microtones."
authors = ["Rika"]
license = "Apache-2.0"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "symi_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
log = "0.4.29"
tauri = { version = "2.10.2", features = [] }
tauri-plugin-log = "2.8.0"
symi-rs = { path = "../../rs" }
anyhow = "1.0.101"
parking_lot = "0.12.5"
chrono = "0.4.43"
tauri-plugin-fs = "2.4.5"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-opener = "2"
lsp-server = "0.8.1"
lsp-types = "0.98.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2"
